panel/deployment-panel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl
spec:
  selector:
    matchLabels:
      app: pterodactyl
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pterodactyl
      annotations:
        deploy-date: "deploy-date-value"
    spec:
      containers:
      - name: pterodactyl
        image: ghcr.io/pterodactyl/panel:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits: 
            memory: "256Mi"
            cpu: "500m" 
        ports: 
          - containerPort: 80
        volumeMounts:
        - mountPath: /app/var/
          name: pterodactyl-app-content
        - mountPath: /etc/nginx/http.d/
          name: pterodactyl-nginx-content
        - mountPath: /etc/letsencrypt/
          name: pterodactyl-le-content
        - mountPath: /app/storage/logs
          name: pterodactyl-logs-content

      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
          - "/cloud_sql_proxy"
          - "-log_debug_stdout"
          - "-instances=applaudo-final-project-ed:us-central1:dev-my-sql"
          - "-credential_file=/secrets/sql-client"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: sql-proxy-volume
          mountPath: /secrets/
          readOnly: true

      volumes:
      - name: sql-proxy-volume
        secret:
          secretName: sql-client
      - name: pterodactyl-app-content
        persistentVolumeClaim:
          claimName:  pterodactyl-app-claim
      - name: pterodactyl-nginx-content
        persistentVolumeClaim:
          claimName:  pterodactyl-nginx-claim
      - name: pterodactyl-le-content
        persistentVolumeClaim:
          claimName:  pterodactyl-le-claim
      - name: pterodactyl-logs-content
        persistentVolumeClaim:
          claimName:  pterodactyl-logs-claim
